tdf#82661 SwFrm::PaintBackground: handle fill attrs when comparing background

Regression from 7d9bb549d498d6beed2c4050c402d09643febdfa (Related:
i#124638 Second step of DrawingLayer FillAttributes..., 2014-06-02),
should be good enough till SdrAllFillAttributesHelper gets its own
operator ==().

Change-Id: I03f847bc1589e3771790427d9894cc330a7b8dc6